codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_running.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
expression: rendered
---
 Elpis · model gpt-reserve default · location /tmp/project
Elpising… (0s • esc to interrupt)               │CONTEXT LEDGER  context not
                                                │measured · ≈0 source estimates
┌──────────────────────────────────────────────┐│Tab controls · Alt+C hide ·
› x                                            ││Ctrl+click open file
└──────────────────────────────────────────────┘│
  enter to queue message                        │SMART PRUNE          [···] SYNC
                                                │Reading current thread state
                                                │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │SUBAGENTS             [━━━●] ON
                                                │May delegate to other agents
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
                                                │until the first request
                                                │snapshot
                                                │
                                                │No portable context is
                                                │available.
